$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- clarify instructions on firmware upgrade page
  (contributed by Pierre Nast)

- DNS forwarder: add option to log DNS queries, add aliases (CNAMEs) and MXs
  (contributed by Pierre Nast)

- upgrade dnsmasq to 2.66, remove TFTP , auth and DHCPv4 options from dnsmasq

- update some README text

- update go.sh to fix 404 for autconf268 (uses 269 now)

- add ippool utility

- refactoring to support 8.4-RELEASE (remove redunant patches etc)

- Fix Silence RA announce receive log message for WAN interfaces when using dhcp-pd

- Silence RA announce receive log message for WAN interfaces when using dhcp-pd

- Change Build to use SVN for ports, as CVS is depreciated

- Add support for rdnss and dnssl.  RA ipv6 announcement will include Recursive DNS server
  and DNS search list using the same logic as dhcp server does to select these options.

- Add AES 256 option to IPSEC

- Update timezone.tgz with Freebsd8.3 zoneinfo files

- Fix SVG graphs on IE9/10

- Fix IPsec tunnels with endpoint on optional interfaces

- Add job "Wake on LAN" to the scheduler

- Fix corruption check of the scheduler

- Add superficial corruption check forwarder scheduler jobsets

- Fix first modem port not showing

- Add enable/disable scheduler jobset on 'edit job' page

- Add enable/disable scheduler jobsets

- Fix changes to the 'Use device polling' state now fire up a 'reboot required' event as expected.
  Fix changes to the 'Prefer old IPsec SAs' state now trigger an ipsec function call as expected.

- Fix disconnecting sessions on captive portal status page.
  Keep csrf-secret.php from appearing on group manager.

- Generate 2048-bit SSL certificates by default and make them valid for 3 instead of 2 years.

- Replace expired default certificate/key by new one.

- Eliminate modifying GETs from services_croen.php
